Modify error messages for payment address validation as per specification.

Specification
https://w3c.github.io/browser-payment-api/

BUG=640847

Review-Url: https://codereview.chromium.org/2340743002
Cr-Commit-Position: refs/heads/master@{#418888}

Former-commit-id: 2465b1d8154ac1b482c0e3ec86df89d33fb9af6e